<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp"
    android:minHeight="480dp"
    android:layout_gravity="center"
    android:padding="@dimen/_7sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:id="@+id/AddTaskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_semibold"
            android:lineHeight="27sp"
            android:text="@string/add_task"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:targetApi="p" />

        <EditText
            android:id="@+id/titleOfTaskEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/AddTaskTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/what_s_the_task"
            android:inputType="textAutoCorrect"
            android:padding="@dimen/_7sdp" />


        <LinearLayout
            android:id="@+id/dateTimeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@id/titleOfTaskEditText"
            android:layout_alignStart="@+id/titleOfTaskEditText"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateOfTaskEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/date"
                android:padding="@dimen/_7sdp" />

            <EditText
                android:id="@+id/timeOfTaskEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/timeOfTask"
                android:padding="@dimen/_7sdp"
                android:pointerIcon="arrow" />


        </LinearLayout>


        <View
            android:id="@+id/line_1"
            android:layout_width="304dp"
            android:layout_height="0dp"
            android:layout_below="@id/dateTimeLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/line_1" />

        <TextView
            android:id="@+id/setPriorityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_alignStart="@+id/dateTimeLinearLayout"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/set_priority"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setPriorityTextView"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowRadiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="2dp"
                android:shadowColor="@color/green_light"
                android:text="@string/low"
                android:textColor="@color/green_light"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/mediumRadiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="2dp"
                android:shadowColor="@color/orange_light"
                android:text="@string/medium"
                android:textColor="@color/orange_light"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/highRadiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="2dp"
                android:shadowColor="@color/red_light"
                android:text="@string/high"
                android:textColor="@color/red_light"
                android:textSize="13sp" />

        </RadioGroup>

        <View
            android:id="@+id/line_2"
            android:layout_width="304dp"
            android:layout_height="0dp"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="24dp"
            android:background="@drawable/line_1" />

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_2"
            android:layout_alignStart="@+id/setPriorityTextView"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:shadowColor="@color/blue_light"
            android:text="@string/remind_me_for_this_task"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_below="@id/reminderSwitch"
            android:orientation="horizontal"
            android:padding="@dimen/_7sdp">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/cancel_shape"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/_14ssp" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/add_btn_shape"
                android:text="@string/add"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

