<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:padding="21dp"
    android:layout_marginRight="2dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp">

        <RelativeLayout
            android:id="@+id/oneline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/taskPriority"
                android:layout_width="9dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/priority_low" />

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/taskPriority"
                android:fontFamily="@font/poppins_semibold"
                android:padding="7dp"
                android:text="Task title"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:button="@drawable/unchecked"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:text="" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/oneline"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="-8dp"
                android:padding="7dp"
                android:src="@drawable/calendarview_overdue" />

            <TextView
                android:id="@+id/dateOfDayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/calendarView"
                android:fontFamily="@font/poppins_light"
                android:text="@string/dateOfDay"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/timeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calendarView"
                android:layout_marginStart="2dp"
                android:padding="7dp"
                android:src="@drawable/timeview_overdue" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateOfDayTextView"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/timeView"
                android:padding="2dp"
                android:text="@string/time" />

            <RelativeLayout
                android:id="@+id/reminderView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/dateOfDayTextView"
                android:layout_marginStart="140dp"
                android:layout_toEndOf="@id/timeTextView"
                android:background="@drawable/reminder_shape"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/alarmView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_toStartOf="@id/reminderTextView"
                    android:src="@drawable/ic_baseline_alarm_24" />

                <TextView
                    android:id="@+id/reminderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="2dp"
                    android:text="@string/reminder_on"
                    android:textColor="@color/green" />


            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>